# garage-single-node

./: .dockerignore  .env  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.rs  compose.yml  example.env  garage-admin-v2-openapi-3.0.json
.github/workflows/: publish-ghcr.yml
src/: config.rs  garage.toml  main.rs  random.rs
