[package]
name = "garage-bootstrap"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
chrono = { version = "0.4.43", features = ["serde"] }
futures = "0.3"
getrandom = "0.3.4"
hex = "0.4.3"
kuska-sodiumoxide = "0.2.5-0"
progenitor-client = "0.11.2"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = [
    "rt-multi-thread",
    "macros",
    "process",
] }
toml_edit = "0.24.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { version = "1.19.0", features = ["serde", "v4"] }

[build-dependencies]
prettyplease = "0.2.22"
progenitor = "0.11.2"
serde_json = "1.0"
syn = "2.0"
